Fix create Machine button behavior on IE

--- a/apps/ms1_fe/base/wiki_gcb/.files/css/custom.css
+++ b/apps/ms1_fe/base/wiki_gcb/.files/css/custom.css
@@ -286,6 +286,12 @@ body ul#resources li.resource ul.endpoints li.endpoint ul.operations li.operatio
 body ul#resources li.resource ul.endpoints li.endpoint ul.operations li.operation.get div.content h4 { color: #06a7e2; }
 /* end of swagger*/
 
+/* Machines list Page */
+#singlebutton:hover{
+ color: #fff;
+}
+/* End of Machines list Page */
+
 /* New Machine Page */
 .machineList ul li, .storage-size-list li { float: left; list-style: none; margin: 17px 14px; display: inline-block; height: 137px; }
 .machineList ul li a, .storage-size-list button { color: #77777b; font-size: 13px; width:250px; height: 137px; background: url(../img/images/machine.jpg) no-repeat; text-align: center; padding: 0px 45px 30px; line-height: 20px; overflow: hidden; font-weight: bold; vertical-align: middle; }/**/
